<resources>
    <string name="app_name">Android Call Recorder Replayer Dictaphone</string>
    <string name="app_acronym">AC2RD</string>
    <string name="app_version">Version 1.1.0</string>
    <string name="app_copyright">Copyright © 2016&#8211;2017 A.Vassellier</string>
    <string name="widget_app_acronym">@string/app_acronym</string>
    <string name="widget_telephone_call_recorder_state_off">No action in progress</string>
    <string name="widget_telephone_call_recorder_state_on">Record in progress</string>
    <string name="widget_telephone_call_recorder_state_on_incoming_call">Record in progress (incoming call)</string>
	<string name="widget_telephone_call_recorder_state_on_outgoing_call">Record in progress (outgoing call)</string>
	<string name="widget_telephone_call_recorder_state_on_microphone">Record in progress (dictaphone)</string>
	<string name="widget_storage_state">Available space</string>
	<string name="widget_recorder_service_state_on">Call recorder enabled</string>
	<string name="widget_recorder_service_state_off">Call recorder disabled</string>
	<string name="widget_playlist">Playlist</string>
	<string name="widget_microphone_start">Rec</string>
	<string name="widget_microphone_stop">Stop</string>
    <string name="splashscreen_app_name">@string/app_name</string>
    <string name="splashscreen_app_acronym">@string/app_acronym</string>
    <string name="splashscreen_app_version">@string/app_version</string>
    <string name="splashscreen_app_copyright">@string/app_copyright</string>
    <string name="acquitment_warning">Warning</string>
    <string name="acquitment_text">Voluntarily harming the privacy of another\'s privacy, by capturing, recording or transmitting, by any means, without the consent of the author, words or phrases, may be punished by a fine and / or imprisonment.
									\n\nWhere the acts referred to above have been carried out in the eyes of the persons concerned without their having objected to them, when they were in a position to do so, their consent may be presumed.
									\n\nCarry, or allow the public or any third party to use, or use in any way, any record, or document obtained by means of any of the acts mentioned above, may be punished by the same sentences.
									\n\nWhere the offense is committed by means of the written or audiovisual press, the special provisions of the laws governing these matters shall apply as regards the determination of the persons responsible.
									\n\nPlease check the applicable laws in your country / state before registering telephone conversations with this software.\n</string>
    <string name="acquitment_checkbox_text">\nI have read the above terms of use : </string>
	<string name="acquitment_accept">Accept</string>
	<string name="acquitment_cancel">Refuse</string>
	<string name="main_tab_home">Home</string>
	<string name="main_tab_records">Records</string>
	<string name="main_tab_preferences">Preferences</string>
	<string name="main_tab_log">Logbook</string>
	<string name="main_tab_test">Test</string>
	<string name="main_tab_about">About</string>
	<string name="main_toolbar">@string/app_acronym</string>
	<string name="main_toolbar_slide_menu">@string/main_tab_home</string>
	<string name="main_toolbar_slide_menu_open">Open</string>
    <string name="main_toolbar_slide_menu_close">Close</string>
	<string name="main_toolbar_home">@string/main_tab_home</string>
	<string name="main_toolbar_home_description">Main menu of the software</string>
	<string name="main_toolbar_records">@string/main_tab_records</string>
	<string name="main_toolbar_records_description">Manage your records</string>
	<string name="main_toolbar_preferences">@string/main_tab_preferences</string>
	<string name="main_toolbar_preferences_description">Software settings</string>
	<string name="main_toolbar_log">@string/main_tab_log</string>
	<string name="main_toolbar_log_description">Logging software events</string>
	<string name="main_toolbar_test">@string/main_tab_test</string>
	<string name="main_toolbar_test_description">Menu for tester</string>
	<string name="main_toolbar_about">@string/main_tab_about</string>
	<string name="main_toolbar_about_description">More details about AC2RD</string>
	<string name="main_toolbar_exit">Leave</string>
	<string name="main_toolbar_exit_description">Close the AC2RD software</string>
	<string name="home_general_state">General state</string>
	<string name="home_storage_path">Storage : </string>
	<string name="home_storage_available_space">Available space :  </string>
	<string name="home_telephone_call_recorder">Call recorder</string>
	<string name="records_menu_order">Sort records</string>
	<string name="records_order_by_asc">by ascending order</string>
	<string name="records_order_by_desc">by decreasing order</string>
	<string name="records_menu_display">Display options</string>
	<string name="records_display_call_of_day">Records of the day</string>
	<string name="records_display_all_call">All records</string>
	<string name="preferences_record">Recorder</string>
	<string name="preferences_record_activate">Activate recorder</string>
	<string name="preferences_record_activate_summary">This option activates the call recording service.</string>
	<string name="preferences_filters">Call filters</string>
	<string name="preferences_filters_activate">Activate call filters</string>
	<string name="preferences_filters_activate_summary">This option activates the call filters.</string>
	<string name="preferences_filters_define">Filters definition</string>
	<string name="preferences_filters_define_summary">This option defines the call filters.</string>
	<string name="preferences_shake_detector_activate">Shake to record</string>
	<string name="preferences_shake_detector_activate_summary">This option allows recording when the phone shake.</string>
	<string name="filters_menu_order">Sort contacts</string>
	<string name="filters_order_by_asc">by ascending order</string>
	<string name="filters_order_by_desc">by decreasing order</string>
	<string name="filters_menu_display">Display options</string>
	<string name="filters_display_not_recordable_contacts">Non-recordable contacts</string>
	<string name="filters_display_recordable_contacts">Recordable contacts.</string>
	<string name="filters_display_all_contacts">All contacts</string>
	<string name="preferences_audio">Audio</string>
	<string name="preferences_audio_source">Audio source</string>
	<string name="preferences_audio_source_summary">This option defines the source of the audio stream to be recorded.
	    											\nAudio source :</string>
	<string name="preferences_audio_max_volume_activate">Max Volume</string>
	<string name="preferences_audio_max_volume_activate_summary">This option enables volume boost.</string>
	<string name="preferences_audio_format">Audio format</string>
	<string name="preferences_audio_format_summary">This option sets the audio format of records.
	    											\nAudio format :</string>
	<string name="preferences_replayer">Replay</string>
	<string name="preferences_replayer_visualizer">Audio spectrum</string>
	<string name="preferences_replayer_visualizer_summary">This option allows you to configure the display of the audio spectrum during replay.
	    													\nMode : </string>
	<string name="preferences_storage">Storage</string>
	<string name="preferences_storage_path">Storage directory</string>
	<string name="preferences_storage_path_summary">This option sets the record storage directory.
	    											\nStorage directory : </string>
	<string name="preferences_purge">Purge</string>
	<string name="preferences_purge_activate">Activate the service</string>
	<string name="preferences_purge_activate_summary">This option enables the purge of obsolete records.</string>
	<string name="preferences_purge_frequency">Frequency of service</string>
	<string name="preferences_purge_frequency_summary">This option sets the purge frequency of obsolete records.
	    											\nFrequency of service :</string>
	<string name="preferences_purge_retention">Retention time</string>
	<string name="preferences_purge_retention_summary">This option sets the retention time for records.
	    											\nRetention time :</string>
	<string name="preferences_logs">Logging</string>
	<string name="preferences_logs_activate">Enable logging</string>
	<string name="preferences_logs_activate_summary">This option enables logging of internal software events.</string>
	<string name="preferences_notifications">Notifications</string>
	<string name="preferences_notifications_activate">Enable notifications</string>
	<string name="preferences_notifications_activate_summary">This option enables notifications.</string>
	<string name="preferences_notifications_sound_activate">Notifications with sound</string>
	<string name="preferences_notifications_sound_activate_summary">This option triggers a sound for each new notification.</string>
	<string name="preferences_notifications_vibrate_activate">Notifications with vibration</string>
	<string name="preferences_notifications_vibrate_activate_summary">This option triggers a vibration for each new notification.</string>
	<string name="preferences_notifications_led_activate">Notifications with LED</string>
	<string name="preferences_notifications_led_activate_summary">This option enables the LED for each new notification.</string>
	<string name="preferences_toast_messages_activate">Toast messages</string>
	<string name="preferences_toast_messages_activate_summary">This option activates information messages that appear on the screen.</string>
	<string name="preferences_locale">Language</string>
	<string name="preferences_locale_set">Define the language</string>
	<string name="preferences_locale_set_summary">This option is used to define the language to be used in the software.
	    										\nLanguage :</string>
	<string name="preferences_theme">Theme</string>
	<string name="preferences_theme_set">Define the theme</string>
	<string name="preferences_theme_set_summary">This option allows you to define the theme of the software.
	    										\nTheme :</string>
	<string name="preferences_color_theme_set">Define the theme color</string>
	<string name="preferences_color_theme_set_summary">This option allows you to define the color of the theme to be used in the software.
	    										\nCouleur :</string>
	<string name="preferences_splashscreen">Splash screen</string>
	<string name="preferences_splashscreen_activate">Enable the splash screen</string>
	<string name="preferences_splashscreen_activate_summary">This option enables the splash screen when the software is launched.</string>
	<string name="about_app_name">@string/app_name</string>
	<string name="about_app_version">@string/app_version</string>
	<string name="about_app_copyright">@string/app_copyright</string>
	<string name="about_app_license">License</string>
	<string name="about_app_license_detail">Licensed Software</string>
	<string name="about_app_license_detail_summary">Read the license of the software</string>
	<string name="about_app_acquitment">Terms of use</string>
	<string name="about_app_acquitment_detail">Details of terms of use</string>
	<string name="about_app_acquitment_detail_summary">Read the terms of use of the software</string>
	<string name="about_app_acquitment_checkbox">I accept the terms of uses</string>
	<string name="about_app_acquitment_text">By validating this checkbox, you agree to the terms of use of the software</string>
	<string name="test_record_on_microphone">Record on microphone</string>
	<string name="test_stop_record">Stop record</string>
	<string name="test_insert_call">Insert records (DB)</string>
	<string name="test_add_event">Add event (logbook)</string>
	<string name="test_delete_all_events">Clear the logbook</string>
	<string name="test_notification">Notification</string>
	<string name="test_toast_message">Toast message</string>
	<string name="test_purge_all_records">Purge all records</string>
</resources>