<?xml version="1.0" encoding="utf-8"?>

<!--  
 - @file about_preferences.xml
 - @brief Layout
 - @author Arnaud Vassellier
 - @version 1.0
 - @date 2016
 - 
 - This file is part of ACRRD (Android Call Recorder Replayer Dictaphone).

    ACRRD is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    ACRRD is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with ACRRD.  If not, see <http://www.gnu.org/licenses/>
 - 
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/about_app_name">
		<PreferenceScreen
		    android:key="about_app_version"
		    android:title="@string/about_app_version"
		    android:summary="@string/about_app_copyright"
		    /> 
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/about_app_license">
	    <PreferenceScreen
	        android:key="about_app_license_detail"
		    android:title="@string/about_app_license_detail"
		    android:summary="@string/about_app_license_detail_summary"
		    />
	</PreferenceCategory>
	    
	<PreferenceCategory android:title="@string/about_app_acquitment">
	    <PreferenceScreen
	        android:key="about_app_acquitment_detail"
		    android:title="@string/about_app_acquitment_detail"
		    android:summary="@string/about_app_acquitment_detail_summary"
		    />
	    <CheckBoxPreference
	        android:title="@string/about_app_acquitment_checkbox"
			android:defaultValue="false"
			android:summary="@string/about_app_acquitment_text"
			android:key="about_app_acquitment"
			/>
	</PreferenceCategory>

</PreferenceScreen>