<?xml version="1.0" encoding="utf-8"?>

<!--  
 - @file main_toolbar.xml
 - @brief Layout
 - @author Arnaud Vassellier
 - @version 1.0
 - @date 2016
 - 
 - This file is part of ACRRD (Android Call Recorder Replayer Dictaphone).

    ACRRD is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    ACRRD is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with ACRRD.  If not, see <http://www.gnu.org/licenses/>
 - 
-->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Main"
    >
    
    <item
        android:id="@+id/main_toolbar_preferences"
        android:title="@string/main_toolbar_preferences"
        android:icon="@drawable/ic_menu_preferences"
        android:orderInCategory="100"
        />
    
	<item
	    android:id="@+id/main_toolbar_test"
        android:title="@string/main_toolbar_test"
        android:icon="@drawable/ic_menu_preferences"
        android:orderInCategory="200"
        />

	<item
	    android:id="@+id/main_toolbar_logs"
        android:title="@string/main_toolbar_log"
        android:icon="@drawable/ic_menu_archive"
        android:orderInCategory="200"
        />

	<item
	    android:id="@+id/main_toolbar_about"
        android:title="@string/main_toolbar_about"
        android:icon="@drawable/ic_menu_info_details"
        android:orderInCategory="200"
        />

	<item
	    android:id="@+id/main_toolbar_exit"
        android:title="@string/main_toolbar_exit"
        android:icon="@drawable/ic_menu_revert"
        android:orderInCategory="200"
        />
	
</menu>