<?xml version="1.0" encoding="utf-8"?>

<!--  
 - @file splashscreen.xml
 - @brief Layout
 - @author Arnaud Vassellier
 - @version 1.0
 - @date 2016
 - 
 - This file is part of ACRRD (Android Call Recorder Replayer Dictaphone).

    ACRRD is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    ACRRD is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with ACRRD.  If not, see <http://www.gnu.org/licenses/>
 - 
-->

<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/splashscreen"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	
	<RelativeLayout
		android:orientation="vertical"
		android:background="@color/black"
		android:gravity="center"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		>
		<TextView
		    android:textColor="@color/red"
			android:id="@+id/splashscreen_app_acronym"
			android:text="@string/splashscreen_app_acronym"
			android:textSize="42sp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:textStyle="bold"
			android:padding="2dp"
			android:shadowColor="@color/red"
			android:shadowDx="0"
			android:shadowDy="0"
			android:shadowRadius="6"
			/>
		<TextView
		    android:textColor="@color/white"
			android:id="@+id/splashscreen_app_name"
			android:text="@string/splashscreen_app_name"
			android:textSize="14sp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_below="@id/splashscreen_app_acronym"
			android:textStyle="bold"
			android:padding="2dp"
			android:layout_centerHorizontal="true"
			android:shadowColor="@color/red"
			android:shadowDx="0"
			android:shadowDy="0"
			android:shadowRadius="2"
			/>
	</RelativeLayout>
	
	<TextView
	    android:textColor="@color/white"
		android:id="@+id/splashscreen_app_copyright"
		android:text="@string/splashscreen_app_copyright"
		android:textSize="14sp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
		android:textStyle="italic"
		android:padding="2dp"
		android:shadowColor="@color/red"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="2"
		/>

</RelativeLayout>